src/css/viz-dashlet.css
table{
    font-size: 12px;
}

label{
    margin: 0px;
    padding: 0px;
}

.glyphicon-viz {
    text-shadow: 1px 1px 1px #ccc;
    font-size: 1.2em;
}

.glyphicon-viz:hover {
    text-shadow: 1px 1px 1px #ccc;
    font-size: 1.2em;
}

svg.nvd3-svg{
    display: inline !important;
}

.viz-panel-body {
    padding: 0 !important;
}

div.panel-default.viz-panel-default > * > div.panel-body{
    padding: 0px;
    margin-left: 3px;
    margin-right: 3px;
}

viz-query > * > div.panel-group{
    margin: 2px;
}

hr.viz-hr{
    margin: 8px;
}

.innercontainer {
    overflow-y: auto;
    overflow-wrap: break-word;
    justify-content: center;
    text-align: center;
}

.viewcontainer {
    vertical-align: middle !important;
    justify-content: center !important;
    text-align: center !important;
}

.chartcontainer{
vertical-align: middle;
text-align: center;
overflow-y: hidden;
overflow-wrap: break-word;
}

.tablecontain{
    display: inline-block;
    text-align: left;
    justify-content: center;
    margin-top: 20px;
    vertical-align: middle !important;
}

.dashletbox{
text-align: center;
justify-content: center;
vertical-align: middle;
}

.innerwell {
    margin-left: 0;
}

div.ul-viewtab > div.tab-content {
    padding: 0px;
    margin: 0px;
}

div.dashlet > * > .nav-link {
    border: 1px solid #ddd !important;
    padding: 5px !important;
}

ul.ul-control  {
    border: 1px solid #ddd !important;
    margin-top: -1px !important;
}

div.ul-viewtab > ul{
    border: 1px solid #ddd !important;
}

div.dashlet > ul > li > a, div.dashlet > ul > li.active > a, div.dashlet > ul > li > a:hover{
    border: 1px solid #ddd !important;
    padding: 2px 6px !important;
}

div.viz-panel-default > * >  h4.panel-title{
    color: black !important;
    text-decoration: none !important;
}

div.viz-panel-default > * > h4.panel-title > a:hover, div.viz-panel-default > * > h4.panel-title > a.active{
    text-decoration: none !important;
    text-decoration: none !important;
}

div.viz-panel-default >  div.panel-heading{
    margin: 0;
    padding: 0;
}

label.viz-label{
    text-decoration: none !important;
    font-weight: 1;
    margin-left: 3px;
    margin-top: 2px;
}

.viz-btn-success{
    font-weight: bold;
}

.viz-btn-dashlet {
    margin: 5px;
    margin-bottom: 15px;
}

.viz-btn-container{
    justify-content: right;
    text-align: right;
}

.form-wrapper {
    margin: 0px;
    padding: 0px;
}

.center-block{
    margin: 0;
    padding: 0;
    width: 100% !important;
    display: inline-flex !important;;
}

.colcontain-grid{
    display: inline-grid;
}

.colcontain-contents{
    display: contents;
}

.innerformcontainer {
    margin: 0;
    padding: 0;
    text-align: center;
    justify-content: center;
}

.innerformcontainer > .row {
    margin: 0;
    padding: 2;
    text-align: left;
    justify-content: left;
}

div.form-radio > label.btn, div.form-radio > button{
    padding: 2px 4px;
    font-size: 10px;
}

.viz-btn-group{
    margin-top: 5px !important;
    display: block !important;
}

